--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,14 +6,17 @@
     <div class="tabs_item">
        タイムライン
      </div>
-   </div>
+  </div>
 
- 
-  <div class="card">
+  <% @articles.each do |article| %>
+    <div class="card">
      <div class="card_image">
        <%= image_tag 'eyecatch1.png' %>
      </div>
      <div class="card_content">
+       <div class="card_title">
+         <%= article.title %>
+       </div> 
        <div class="card_heart">
          <%= image_tag 'heart.svg' %>
          <span>23</span>
@@ -22,47 +25,10 @@
          <%= image_tag 'default-avatar.png' %>
          <div>
            <p>cohki0305</p>
-           <p>2020/4/16</p>
+           <p>2021/1/7</p>
          </div>
        </div>
      </div>
-   </div>
-
-    <div class="card">
-     <div class="card_image">
-       <%= image_tag 'eyecatch2.png' %>
-     </div>
-     <div class="card_content">
-       <div class="card_heart">
-         <%= image_tag 'heart.svg' %>
-         <span>23</span>
-       </div>
-       <div class="card_detail">
-         <%= image_tag 'default-avatar.png' %>
-         <div>
-           <p>cohki0305</p>
-           <p>2020/4/16</p>
-         </div>
-       </div>
-     </div>
-   </div>
-
-    <div class="card">
-     <div class="card_image">
-       <%= image_tag 'eyecatch2.png' %>
-     </div>
-     <div class="card_content">
-       <div class="card_heart">
-         <%= image_tag 'heart.svg' %>
-         <span>23</span>
-       </div>
-       <div class="card_detail">
-         <%= image_tag 'default-avatar.png' %>
-         <div>
-           <p>cohki0305</p>
-           <p>2020/4/16</p>
-         </div>
-       </div>
-     </div>
-   </div>
- </div>
+    </div>
+  <% end %>
+</div>
