--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,9 @@
 @import 'variables';
 @import 'card';
 @import 'article';
+@import 'buttons';
+@import 'form';
+@import 'flash';
 
 html {
    word-spacing: 1px;
@@ -33,10 +36,24 @@ a {
  color: $text-base-color;
 }
 
-
-
-
 .container {
    padding: 16px 16px;
    width: 100%;
+}
+
+.float_btn {
+   position: fixed;
+   bottom: 16px;
+   right: 16px;
+   width: 64px;
+   height: 64px;
+   border-radius: 100%;
+   text-align: center;
+   background-color: $primary-color;
+   color: rgb(236, 222, 222);
+   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+
+   i {
+      margin-top: 22px;
+   }
 }
