編集ボタンの

--- a/app/assets/stylesheets/article.scss
+++ b/app/assets/stylesheets/article.scss
@@ -14,18 +14,24 @@ $heart-size: 32px;
 
     &_detail {
      padding-top: 10px;
-     cursor: pointer;
      display: flex;
      font-size: 12px;
+     position: relative;
 
       img {
        width: $avatar-size;
        height: $avatar-size;
        border-radius: 100%;
        margin-right: 16px;
+       cursor: pointer;
      }
+  
+     &_actions{
+      right: 0px;
+      position: absolute;  
+    }
    }
-
+        
     &_content {
      padding: 24px 0 32px;
    }
@@ -40,4 +46,4 @@ $heart-size: 32px;
        height: $heart-size;
      }
    }
- }
+}
