--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,14 @@
       <p>sugitaagirus</p>
       <p>2021/1/19</p>
     </div>
+      <div class="article_detail_actions">
+        <div class="dropdown">
+          <%= image_tag 'actions.svg', class: 'dropbtn' %>
+          <div class="dropdown-content mini">
+             <a href="#">編集する</a>
+          </div>
+        </div>
+      </div>
    </div>
    <div class="article_content">
      <%= @article.content %>
