--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <ul>
-    <% @article.errors.full_messages.each do |message| %>
+    <% article.errors.full_messages.each do |message| %>
        <li><%= message %></li>
     <% end %>
   </ul>
-   <%= form_with(model: @article, local: true) do |f| %>
+   <%= form_with(model: article, local: true) do |f| %>
    <div>
        <%= f.label :title, 'タイトル' %>
    </div>
