--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag 'default-avatar.png' %>
     <div>
       <p>sugitaagirus</p>
-      <p>2021/1/19</p>
+       <p><%= @article.display_created_at %></p>
     </div>
       <div class="article_detail_actions">
         <div class="dropdown">
