--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -5,13 +5,14 @@
     %div
       %p sugitaagirus
       %p= @article.display_created_at
-    .article_detail_actions
-      .dropdown
-        = image_tag 'actions.svg', class: 'dropbtn'
-        .dropdown-content.mini
-          = link_to '編集する', edit_article_path(@article)
-          = link_to '削除する', article_path(@article), data: { method: 'delete', confirm: '本当に削除して宜しいですか' }
-  .article_content
+    - if user_signed_in?
+      .article_detail_actions
+        .dropdown
+          = image_tag 'actions.svg', class: 'dropbtn'
+          .dropdown-content.mini
+            = link_to '編集する', edit_article_path(@article)
+            = link_to '削除する', article_path(@article), data: { method: 'delete', confirm: '本当に削除して宜しいですか' }
+    .article_content
     = @article.content
   .article_heart
     = image_tag 'heart.svg'
