--- a/app/assets/stylesheets/article.scss
+++ b/app/assets/stylesheets/article.scss
@@ -1,16 +1,25 @@
 $heart-size: 32px;
- $avatar-size: 32px;
+$avatar-size: 32px;
 
-  .article {
+.article {
    background-color: white;
    margin: 16px 16px;
    padding: 16px 16px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
    position: relative;
+   
+   h2 {
+     font-size: 16px;
+   }
 
     &_title {
      font-size: 22px;
    }
+   
+   &_comment {
+     padding: 12px 0;
+   }
+
 
     &_detail {
      padding-top: 10px;
