--- a/app/views/commons/_article.html.haml
+++ b/app/views/commons/_article.html.haml
@@ -9,7 +9,7 @@
         = image_tag 'heart.svg'
         %span 75765387250
       .card_detail
-        = image_tag 'default-avatar.png'
+        = image_tag article.user.avatar_image
         %div
           %p= article.author_name
           %p= article.display_created_at
