--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -12,10 +12,12 @@
           .dropdown-content.mini
             = link_to '編集する', edit_article_path(@article)
             = link_to '削除する', article_path(@article), data: { method: 'delete', confirm: '本当に削除して宜しいですか' }
-    .article_content
+  .article_content
     = @article.content
-  .article_heart
-    = image_tag 'heart.svg'
+  - if user_signed_in?
+    .article_heart
+      = link_to article_like_path(@article), data: { method: 'post' } do
+      = image_tag 'heart.svg'
 
 .article
   %h2 コメント一覧
