--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -11,6 +11,11 @@
    padding: $header-padding-y 16px;
    font-weight: bold;
 
+  a {
+    color: white;
+  }
+
+
    &_loginBtn {
     background-color: $base-bg-color;
     height: $avatar-size;
